objects/appirio_core__Currency__c.object
<CustomObject>
    <customHelpPage>appirio_core__CurrencyHelp</customHelpPage>
    <description>This core object is only used if you manage dated exchange rates using FinancialForce PSA instead of Salesforce advanced currency management. Associate every currency record (with matching currency code) to a currency defined by Salesforce multiple currencies (multi-currency enablement is required by PSA). Currencies have a master-detail relationship with dated exchange rates (currency exchange rates). One currency is designated as corporate.</description>
    <fields>
        <fullName>appirio_core__Currency_Code__c</fullName>
        <description>Represents the Currency Code abbreviation (e.g. USD, EUR, CAD) for the currency.  This is usually 3 characters.</description>
        <externalId>true</externalId>
        <inlineHelpText>Represents the Currency Code abbreviation (e.g. USD, EUR, CAD) for the currency.  This is usually 3 characters.</inlineHelpText>
        <label>Currency Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>appirio_core__Is_Corporate_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether currency record is for Corporate Currency - i.e. currency to which all other currencies are compared for exchange rate purposes.</description>
        <inlineHelpText>Indicates whether currency record is for Corporate Currency - i.e. currency to which all other currencies are compared for exchange rate purposes.</inlineHelpText>
        <label>Is Corporate Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appirio_core__Is_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that this currency record is only being used in test mode and is not to be used for &apos;real&apos; (production) exchange rate conversions, and that any exchange rates defined for this currency also should not be used for &apos;real&apos; conversions.</description>
        <inlineHelpText>If checked, indicates that this currency record is only being used in test mode and is not to be used for &apos;real&apos; (production) exchange rate conversions, and that any exchange rates defined for this currency also should not be used for &apos;real&apos; conversions.</inlineHelpText>
        <label>Is Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appirio_core__Is_Void__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that this currency record is invalid and is not to be used, and that any exchange rates defined for this currency also should not be used.</description>
        <inlineHelpText>If checked, indicates that this currency record is invalid and is not to be used, and that any exchange rates defined for this currency also should not be used.</inlineHelpText>
        <label>Is Void</label>
        <type>Checkbox</type>
    </fields>
    <label>Currency</label>
    <listViews>
        <fullName>appirio_core__All</fullName>
        <columns>NAME</columns>
        <columns>appirio_core__Currency_Code__c</columns>
        <columns>appirio_core__Is_Corporate_Currency__c</columns>
        <columns>appirio_core__Is_Test__c</columns>
        <columns>appirio_core__Is_Void__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Currency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>